random route generation is set to false.

--- a/manifest.yml
+++ b/manifest.yml
@@ -2,6 +2,6 @@
 applications:
 - name: spring-music
   memory: 768M 
-  random-route: true
+  random-route: false
   path: build/libs/spring-music.jar
 
